# physical_engine_simulates_car_crashes

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  NOTICE  README.md
cmake/modules/: FINDASSIMP.cmake  FINDGLM.cmake  FINDPHYSX.cmake  FindGLFW3.cmake
include/PhysX/: PxPhysicsAPI.h
include/PhysX/extensions/: PxCustomGeometryExt.h
include/src_include/: animation.h  animator.h  animdata.h  assimp_qt_coversion.h  bone.h  endbutton.h  file_path_system.h  file_read_system.h  file_wirte_system.h  filepathsystem.h  filereadsystem.h  filewirtesystem.h  first_person_camera.h  firstpersoncamera.h  functionmessage.h  geometricalias.h  main_entry_button.h  main_window.h  mainentrybutton.h  mainwindow.h  mesh.h  model.h  modelattribute.h  physxtext.h  render_texture.h  resources_file_type.h  settingbutton.h  settingwindow.h  shader.h  start_window.h  startbutton.h  startwindow.h  uemodule.h  vertices.h
include/src_include/file_system/: file_path_system.h  file_read_system.h  file_wirte_system.h  file_write_system.h  resources_file_type.h
include/src_include/file_system/json_type/: json_basic_setting.h  json_button.h  json_environment_setting.h  json_more_setting.h  json_type.h
include/src_include/file_system/json_type/json_data/: json_GLSL.h  json_data.h  json_image.h  json_logs.h  json_model.h
include/src_include/model_animation/: animation.h  animator.h  animdata.h  bone.h  mesh.h  model.h  modelattribute.h
include/src_include/render/: assimp_qt_coversion.h  first_person_camera.h  opengl_function_base.h  render_texture.h  render_timer.h  shader.h  vertices.h
include/src_include/render/model_animation/: animation.h  animator.h  animdata.h  bone.h  geometryengine.h  mesh.h  model.h  modelattribute.h
include/src_include/setting_window/: basic_setting_window.h  basicsettingswindow.h  environment_setting_window.h  environmentsettingwindow.h  more_setting_window.h  moresettingwindow.h  setting_window.h  setting_window_button.h  settingwindow.h  settingwindowbutton.h
lib/: PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysX_64.lib
physX/: CMakeLists.txt
physX/source/: CMakeLists.txt
physX/source/compiler/cmake/android/: CMakeLists.txt
physX/source/compiler/cmake/ios/: CMakeLists.txt
physX/source/compiler/cmake/linux/: CMakeLists.txt
physX/source/compiler/cmake/mac/: CMakeLists.txt
physX/source/geomutils/src/gjk/: GuGJKType.h
resources/: model_loading.vert  resources.qrc
resources/GLSL/: README.md  model_loading.frag  model_loading.vert  text.frag  text.vert  text_2.frag  text_2.vert  text_3.frag
resources/attributes _beautify_files/: button.qml
resources/json/: README.md  button.json  data.json  index.json  shader_data.json
resources/shader/: text.frag
resources/style/: main_entry_button_style.qml
src/: animation.cpp  animator.cpp  bone.cpp  endbutton.cpp  file_path_system.cpp  file_read_system.cpp  file_wirte_system.cpp  filepathsystem.cpp  filereadsystem.cpp  filewirtesystem.cpp  first_person_camera.cpp  firstpersoncamera.cpp  main.cpp  main_entry_button.cpp  main_window.cpp  mainentrybutton.cpp  mainwindow.cpp  mesh.cpp  model.cpp  physxtext.cpp  render_texture.cpp  settingbutton.cpp  settingwindow.cpp  shader.cpp  start_window.cpp  startbutton.cpp  startwindow.cpp  uemodule.cpp  vertices.cpp
src/file_system/: file_path_system.cpp  file_read_system.cpp  file_wirte_system.cpp  resources_file_type.cpp
src/file_system/json_type/: json_basic_setting.cpp  json_button.cpp  json_environment_setting.cpp  json_more_setting.cpp  json_type.cpp
src/file_system/json_type/json_data/: json_GLSL.cpp  json_data.cpp  json_image.cpp  json_logs.cpp  json_model.cpp
src/model_animation/: animation.cpp  animator.cpp  bone.cpp  mesh.cpp  model.cpp
src/render/: first_person_camera.cpp  opengl_function_base.cpp  render_texture.cpp  render_timer.cpp  shader.cpp  vertices.cpp
src/render/model_animation/: animation.cpp  animator.cpp  bone.cpp  geometryengine.cpp  mesh.cpp  model.cpp
src/setting_window/: basic_setting_window.cpp  basicsettingswindow.cpp  environment_setting_window.cpp  environmentsettingwindow.cpp  more_setting_window.cpp  moresettingwindow.cpp  setting_window.cpp  setting_window_button.cpp  settingwindow.cpp  settingwindowbutton.cpp
src/shader/: text.geom
src/style/: mainentrybuttonstyle.qml
